--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -5,6 +5,30 @@
   License: https://bootstrapmade.com/license/
 */
 
+/* modal */
+.modal-content {
+  background-color: rgb(215, 255, 210);
+}
+
+div.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.37);
+  z-index: 9;
+}
+
+.modal-mask {
+  position: fixed;
+  z-index: 10000;
+  top: 25%;
+  left: 32%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.055);
+}
+
+.modal-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
