--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -5,6 +5,20 @@
   License: https://bootstrapmade.com/license/
 */
 
+
+/* Own add */
+.borderless table {
+  border-top-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-bottom-style: none;
+}
+
+.borderless td, .borderless th {
+  border: none;
+}
+
+
 /* modal */
 .modal-content {
   background-color: rgb(215, 255, 210);
@@ -1172,4 +1186,3 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-top: 30px;
   }
 }
-
