--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -7,6 +7,32 @@
 
 
 /* Own add */
+
+#intro .intro-content .btn-get-started,
+#intro .intro-content .btn-custom {
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 2px;
+  transition: 0.5s;
+  margin: 10px;
+  color: #fff;
+}
+
+#intro .intro-content .btn-custom{
+  background: #1279be;
+  border: 2px solid #1279be;
+
+}
+
+#intro .intro-content .btn-custom:hover {
+  background: none;
+  color: #1279be;
+}
+
 .borderless table {
   border-top-style: none;
   border-left-style: none;
